[WGSL] MSL compilation error opening https://webllm.mlc.ai/ - 'global2' is not declared https://bugs.webkit.org/show_bug.cgi?id=264373 rdar://118086159

Reviewed by Mike Wyrzykowski.

The GlobalVariableRewriter wasn't visiting the MemberAccessExpression's index, so
globals that were only used as indices were never marked as used.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::getPacking):
* Source/WebGPU/WGSL/tests/valid/packing.wgsl:

Canonical link: https://commits.webkit.org/270431@main